--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1 {
   font-weight: bold;  
   margin: 0 auto 60px;
   padding: 1em 2em; 
- <!-- style: "number";-->
+ <!-- mask-type: "number";-->
   text-align: center; 
 }
 
@@ -71,7 +71,7 @@ h1 {
   margin: 15px 4%;
   outline: 0;
   padding: 16px 0;
-  style: number;
+  mask-type: number;
   text-indent: 20px;
   width: 92%;  
 }
