--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Body styling */
 body {
-  background: #d3cefc;
+  background: #royalblue;
   color: #fff;
   font-family: Consolas, Courier;
   font-size: 28px;
@@ -15,7 +15,7 @@ body {
 /* Heading Styles */
 h1 {
   font-size: 144px;
-  color: #46009e;
+  color: #mediumpurple;
   text-align: center;
 }
 
@@ -66,7 +66,7 @@ h1 {
 .choice-bucket input {
   border: 0;
   border-radius: 6px;
-  color: #7c9ff7;
+  color: #seagreen;
   font-size: 60px;
   margin: 15px 4%;
   outline: 0;
