--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Body styling */
 body {
-  background: indianred;
+  background: lightblue;
   color: black;
   font-family: Helvetica, Arial;
   font-size: 27px;
