--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h2 {
 /* Submit Button, Columns, Questions, and Inputs */
 .button-submit {
   background: transparent;
-  border: 3px solid #fff;
+  border: 3px solid #darkblue;
   border-radius: 6px;
   color: #fff;
   cursor: pointer; 
