--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ h2 {
   margin: 60px 0;
   background: #fff;
   border-radius: 6px;
-  color: #713e94;
+  color: darkslateblue;
   transition: 1s linear;
 }
 
